--- a/CSS/style3.css
+++ b/CSS/style3.css
@@ -37,10 +37,10 @@ body{
     background-color: rgba(64, 98, 131, 1);
 }
 .idk_form{
-    justify-content: center;
     color: var(--textwhite);
     padding: 30px 10px;
     width: 50vw;
+    margin-left: 45vw;
 }
 .idk label{
     font-family: 'Open Sans', sans-serif;
@@ -69,9 +69,6 @@ body{
 .input:hover{
     border: 2px solid var(--highlights);
 }
-select{
-    cursor: pointer;
-}
 .create{
     background-color: rgba(0, 0, 0, 0.3);
     display: flex;
@@ -82,7 +79,7 @@ select{
     right: 10vw;
     width: 80vw;
     justify-content: center;
-    cursor:default;
+    cursor: default;
 }
 .create p{
     color: var(--textwhite);
@@ -94,6 +91,7 @@ select{
     position: absolute;
     margin-top: 10vh;
     right: 3vw;
+    margin-bottom: 8vh;
     font-family: 'Open Sans', sans-serif;
     font-style: normal;
     font-weight: 600;
@@ -106,6 +104,123 @@ select{
     transition: color, 200ms;
     cursor: pointer;
 }
+.button2{
+    position: absolute;
+    left: 13vw;
+    top: 89vh;
+    font-family: 'Open Sans', sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    background-color: var(--greenishblue);
+    color: var(--textwhite);
+    padding: 9px 25px;
+    border: none;
+    border-radius: 20px;
+    transition: color, 200ms;
+    cursor: pointer;
+}
+.button2:hover{
+    background-color: var(--greenishblue2);
+}
 .button:hover{
     background-color: var(--greenishblue2);
+}
+.check{
+    height: 0;
+    position: absolute;
+    color: var(--textlight);
+}
+.check small{
+    font-family: 'Open Sans', sans-serif;
+    font-size: 15px;
+    font-weight: 300;
+    transition: color 200ms;
+}
+.check small:hover{
+    color: var(--textwhite);
+}
+.check input[type=checkbox]:checked + small{
+    color: rgb(255, 71, 71);
+    font-weight: 400;
+}
+input[type=checkbox]{
+    cursor: pointer;
+}
+.line{
+    background-color: var(--textlight);
+    position: absolute;
+    height: 90%;
+    width: 5px;
+    bottom: 5%;
+}
+.info{
+    position: absolute;
+    height: 80%;
+    width: 30%;
+    left: 10%;
+    bottom: 10%;
+    border: none;
+    border-radius: 5px;
+    transition: opacity 200ms;
+}
+.info:hover{
+    opacity: 50%;
+}
+.info label{
+    position: relative;
+    color: var(--textwhite);
+    left: 7vw;
+    top: 30px;
+}
+.info p{
+    height: 40px;
+    width: 50%;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 20px;
+    font-weight: 400;
+    position: relative;
+    left: 7vw;
+    margin-top: 45px;
+    margin-bottom: -35px;
+    padding: 5px 20px;
+    color: var(--textlight);
+    cursor: default;
+}
+.eye{
+    position: absolute;
+    padding: 10px;
+    margin-top: 5px;
+    opacity: 30%;
+    transition: opacity 200ms;
+}
+.idk input[name=pass]:checked + img{
+    opacity: 100%;
+}
+.flag{
+    position: absolute;
+    margin-top: 35px;
+    margin-left: 120px;
+    scale: 40%;
+}
+.country{
+    margin-left: 45px;
+}
+.error{
+    background-color: rgba(255, 0, 0, 0.3);
+    display: flex;
+    padding: 2vh;
+    position: absolute;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 50px;
+    font-weight: 400;
+    color: var(--textwhite);
+    border: none;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+    border-radius: 30px;
+    margin-top: 5vh;
+    right: 10vw;
+    width: 80vw;
+    justify-content: center;
+    cursor: default;
 }
