--- a/CSS/style6.css
+++ b/CSS/style6.css
@@ -10,20 +10,20 @@
 }
 body{
     background-color: #202020;
-    background-image: url("../art/background3.jpg");
+    background-image: url("../art/background5.jpg");
     background-repeat: no-repeat;
     background-size:cover;
-    backdrop-filter: blur(0.5rem) brightness(90%);
+    backdrop-filter: blur(0.8rem) brightness(80%);
 }
 .idk{
     background-color: rgba(64, 107, 131, 0.9);
     display: flex;
     position: absolute;
     justify-content: center;
-    right: 10vw;
+    right: 30vw;
     margin-top: 20vh;
     z-index: 1;
-    width: 80vw;
+    width: 40vw;
     padding: 3vh;
     border: none;
     border-radius: 30px;
@@ -37,10 +37,9 @@ body{
     background-color: rgba(64, 98, 131, 1);
 }
 .idk_form{
-    justify-content: center;
     color: var(--textwhite);
-    padding: 30px 10px;
-    width: 50vw;
+    padding: 50px 30px;
+    text-align:right;
 }
 .idk label{
     font-family: 'Open Sans', sans-serif;
@@ -52,7 +51,9 @@ body{
     font-weight: 400;
 }
 .input{
-    height: 40px;
+    position: relative;
+    bottom: 3px;
+    width: 300px;
     font-family: 'Open Sans', sans-serif;
     font-size: 15px;
     font-weight: 400;
@@ -60,6 +61,7 @@ body{
     margin-top: 10px;
     margin-bottom: 10px;
     padding: 5px 20px;
+    height: 45px;
     color: var(--textwhite);
     background-color: #202020;
     border: 2px solid #202020;
@@ -92,8 +94,27 @@ select{
 }
 .button{
     position: absolute;
-    margin-top: 10vh;
+    margin-top: 9.3vh;
     right: 3vw;
+    font-family: 'Open Sans', sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    background-color: darkgoldenrod;
+    color: var(--textwhite);
+    padding: 9px 25px;
+    border: none;
+    border-radius: 20px;
+    transition: color, 200ms;
+    cursor: pointer;
+}
+.button:hover{
+    background-color: rgb(138, 102, 11);
+}
+.button2{
+    position: absolute;
+    left: 33vw;
+    top: 92vh;
     font-family: 'Open Sans', sans-serif;
     font-style: normal;
     font-weight: 600;
@@ -106,61 +127,6 @@ select{
     transition: color, 200ms;
     cursor: pointer;
 }
-.button:hover{
+.button2:hover{
     background-color: var(--greenishblue2);
-}
-.error{
-    background-color: rgba(255, 0, 0, 0.3);
-    display: flex;
-    padding: 2vh;
-    position: absolute;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 50px;
-    font-weight: 400;
-    color: var(--textwhite);
-    border: none;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
-    border-radius: 30px;
-    margin-top: 5vh;
-    right: 10vw;
-    width: 80vw;
-    justify-content: center;
-    cursor: default;
-}
-.check{
-    color: var(--textlight);
-}
-.check small{
-    margin-left: 5px;
-    font-family: 'Open Sans', sans-serif;
-    font-size: 15px;
-    font-weight: 300;
-    transition: color 200ms;
-    cursor: default;
-}
-.check input[type=checkbox]{
-    margin-left: 10px;
-    margin-top: 0;
-    scale: 120%;
-    cursor: pointer;
-}
-.eye{
-    position: absolute;
-    padding: 10px;
-    margin-top: 5px;
-    opacity: 30%;
-    transition: opacity 200ms;
-}
-.idk input[name=pass]:checked + img{
-    opacity: 100%;
-}
-.error_page{
-    background-image: url("../art/background4.jpg");
-    backdrop-filter: blur(0.3rem) brightness(50%);
-}
-.error_page p{
-    margin-top: 20vh;
-}
-.error_page .error{
-    z-index: 1;
 }
