--- a/CSS/style3.css
+++ b/CSS/style3.css
@@ -101,7 +101,7 @@ body{
     padding: 9px 25px;
     border: none;
     border-radius: 20px;
-    transition: color, 200ms;
+    transition: background-color 200ms;
     cursor: pointer;
 }
 .button2{
@@ -117,7 +117,7 @@ body{
     padding: 9px 25px;
     border: none;
     border-radius: 20px;
-    transition: color, 200ms;
+    transition: background-color 200ms;
     cursor: pointer;
 }
 .button2:hover{
