--- a/CSS/style.css
+++ b/CSS/style.css
@@ -72,7 +72,7 @@ header:hover{
     border-radius: 20px;
     cursor: pointer;
     margin-left: 40px;
-    transition: color, 200ms;
+    transition: background-color 200ms;
 }
 .login_button:hover{
     background-color: var(--greenishblue2);
