--- a/CSS/style2.css
+++ b/CSS/style2.css
@@ -103,7 +103,7 @@ select{
     padding: 9px 25px;
     border: none;
     border-radius: 20px;
-    transition: color, 200ms;
+    transition: background-color 200ms;
     cursor: pointer;
 }
 .button:hover{
