--- a/CSS/style6.css
+++ b/CSS/style6.css
@@ -19,6 +19,7 @@ body{
     background-color: rgba(64, 107, 131, 0.9);
     display: flex;
     min-height: 50vh;
+    min-width: 750px;
     position: absolute;
     justify-content: center;
     right: 30vw;
@@ -39,8 +40,27 @@ body{
 }
 .idk_form{
     color: var(--textwhite);
-    padding: 50px 30px;
-    text-align:right;
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.3);
+    right: 2vw;
+    top: 11vh;
+    padding: 10px 20px;
+    border-radius: 15px;
+    font-family: 'Open Sans', sans-serif;
+    color: var(--textlight);
+    cursor: default;
+    font-weight: 200;
+    transition: background-color 300ms;
+}
+.idk_form:hover{
+    background-color: rgba(0, 0, 0, 0.4);
+}
+.change{
+    position: absolute;
+    right: 2vw;
+    top: 5vh;
+    color: var(--textwhite);
+    height: 45px;
 }
 .idk label{
     font-family: 'Open Sans', sans-serif;
@@ -54,7 +74,8 @@ body{
 .input{
     position: relative;
     bottom: 3px;
-    width: 300px;
+    width: 250px;
+    margin-right: 50px;
     font-family: 'Open Sans', sans-serif;
     font-size: 15px;
     font-weight: 400;
@@ -114,8 +135,9 @@ select{
 }
 .button2{
     position: absolute;
-    left: 33vw;
-    top: 92vh;
+    right: 33vw;
+    top: 85vh;
+    z-index: 2;
     font-family: 'Open Sans', sans-serif;
     font-style: normal;
     font-weight: 600;
@@ -179,4 +201,48 @@ select{
 }
 .fat:hover{
     background-color: rgba(0, 0, 0, 0.4);
+}
+.eye{
+    position: absolute;
+    padding: 10px;
+    margin-top: 5px;
+    right: 35px;
+    opacity: 30%;
+    transition: opacity 200ms;
+}
+.idk input[name=pass]:checked + img{
+    opacity: 100%;
+}
+.idk input[name=pass2]:checked + img{
+    opacity: 100%;
+}
+.button3{
+    margin-top: 2vh;
+    margin-left: 11vw;
+    font-family: 'Open Sans', sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    background-color: darkgoldenrod;
+    color: var(--textwhite);
+    padding: 9px 25px;
+    border: none;
+    border-radius: 20px;
+    transition: color, 200ms;
+    cursor: pointer;
+}
+.button3:hover{
+    background-color: rgb(138, 102, 11);
+}
+.error{
+    position: absolute;
+    right: 9.5vw;
+    top: 27.5vh;
+    padding: 10px 20px;
+    background-color: rgba(255, 0, 0, 0.3);
+    border-radius: 15px;
+    color: var(--textwhite);
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 600;
+    font-size: 16px;
 }
