--- a/CSS/style7.css
+++ b/CSS/style7.css
@@ -19,7 +19,6 @@ body{
     background-color: rgba(64, 107, 131, 0.9);
     display: flex;
     min-height: 50vh;
-    min-width: 750px;
     position: absolute;
     justify-content: center;
     right: 30vw;
@@ -42,10 +41,9 @@ body{
     color: var(--textwhite);
     position: absolute;
     background-color: rgba(0, 0, 0, 0.3);
-    right: 2vw;
-    top: 11vh;
     padding: 10px 20px;
     border-radius: 15px;
+    text-align: right;
     font-family: 'Open Sans', sans-serif;
     color: var(--textlight);
     cursor: default;
@@ -64,7 +62,7 @@ body{
 }
 .idk label{
     font-family: 'Open Sans', sans-serif;
-    background-color: #202020;
+    background-color: rgba(0, 0, 0, 0.3);
     border: none;
     border-radius: 15px;
     padding: 5px 20px;
@@ -116,8 +114,8 @@ select{
 }
 .button{
     position: absolute;
-    margin-top: 9.3vh;
-    right: 3vw;
+    margin-top: 6vh;
+    right: -2vw;
     font-family: 'Open Sans', sans-serif;
     font-style: normal;
     font-weight: 600;
@@ -135,7 +133,7 @@ select{
 }
 .button2{
     position: absolute;
-    right: 33vw;
+    left: 33vw;
     top: 85vh;
     z-index: 2;
     font-family: 'Open Sans', sans-serif;
@@ -153,77 +151,30 @@ select{
 .button2:hover{
     background-color: var(--greenishblue2);
 }
-.you{
+.idk p{
     position: absolute;
-    left: 2vw;
-    top: 5vh;
+    font-family: 'Open Sans', sans-serif;
+    background-color: rgba(0, 0, 0, 0.3);
     color: var(--textwhite);
-    height: 45px;
-}
-.names{
-    position: absolute;
-    background-color: rgba(0, 0, 0, 0.3);
-    left: 2vw;
-    top: 11vh;
-    padding: 10px 20px;
     border-radius: 15px;
-    font-family: 'Open Sans', sans-serif;
-    color: var(--textlight);
+    padding: 10px 40px;
+    font-size: 20px;
+    font-weight: 600;
+    text-align: center;
     cursor: default;
-    font-weight: 200;
-    transition: background-color 300ms;
 }
-.names:hover{
-    background-color: rgba(0, 0, 0, 0.4);
+.usure{
+    justify-content: center;
 }
-.names h4{
-    padding: 15px 0;
-}
-.names img{
-    position: absolute;
-    scale: 50%;
-    top: 56px;
-    right: 30px;
-}
-.names button{
-    top: 50px;
-}
-.fat{
-    position: absolute;
-    padding: 10px 31px;
-    border-radius: 15px;
-    background-color: rgba(0, 0, 0, 0.3);
-    font-family: 'Open Sans', sans-serif;
-    color: var(--textlight);
-    transition: background-color 300ms;
-    bottom: 5vh;
-    left: 2vw;
-}
-.fat:hover{
-    background-color: rgba(0, 0, 0, 0.4);
-}
-.eye{
-    position: absolute;
-    padding: 10px;
-    margin-top: 5px;
-    right: 35px;
-    opacity: 30%;
-    transition: opacity 200ms;
-}
-.idk input[name=pass]:checked + img{
-    opacity: 100%;
-}
-.idk input[name=pass2]:checked + img{
-    opacity: 100%;
-}
-.button3{
-    margin-top: 2vh;
-    margin-left: 11vw;
+.usure button{
+    padding: 5px 50px;
+    margin-left: 70px;
+    margin-right: 70px;
+    margin-top: 70px;
     font-family: 'Open Sans', sans-serif;
     font-style: normal;
     font-weight: 600;
     font-size: 16px;
-    background-color: darkgoldenrod;
     color: var(--textwhite);
     padding: 9px 25px;
     border: none;
@@ -231,24 +182,47 @@ select{
     transition: color, 200ms;
     cursor: pointer;
 }
-.button3:hover{
-    background-color: rgb(138, 102, 11);
+.button3{
+    background-color: var(--greenishblue);
 }
-.error{
-    position: absolute;
-    right: 9.5vw;
-    top: 27.5vh;
-    padding: 10px 20px;
-    color: rgba(216, 23, 23, 0.767);
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 700;
-    font-size: 16px;
+.button3:hover{
+    background-color: var(--greenishblue2);
 }
 .button4{
+    background-color: rgb(180, 43, 43);
+}
+.button4:hover{
+    background-color: rgb(133, 35, 35);
+}
+.error{
+    background-color: rgba(255, 0, 0, 0.3);
+    display: flex;
+    padding: 2vh;
     position: absolute;
-    right: 33vw;
-    top: 75vh;
-    z-index: 2;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 50px;
+    font-weight: 400;
+    color: var(--textwhite);
+    border: none;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+    border-radius: 30px;
+    margin-top: 5vh;
+    right: 10vw;
+    width: 80vw;
+    justify-content: center;
+    cursor: default;
+}
+.delete_form{
+    text-align: left;
+    margin-top: 80px;
+}
+.delete_form label{
+    color: var(--textwhite);
+    font-weight: 600;
+    font-size: 20px;
+    padding: 5px 50px;
+}
+.delete_form input[type=submit]{
     font-family: 'Open Sans', sans-serif;
     font-style: normal;
     font-weight: 600;
@@ -261,16 +235,19 @@ select{
     transition: background-color 200ms;
     cursor: pointer;
 }
-.button4:hover{
-    background-color: rgb(133, 35, 35);
+.delete_form input[type=submit]:hover{
+    background-color: rgb(133, 35, 35);;
 }
-.saved{
+.eye{
     position: absolute;
-    right: 14vw;
-    top: 27.5vh;
-    padding: 10px 20px;
-    color: rgba(36, 194, 30, 0.664);
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 600;
-    font-size: 16px;
+    opacity: 30%;
+    margin-right: 40px;
+    transition: opacity 200ms;
+    padding: 18px 10px;
+}
+.idk input{
+    cursor: pointer;
+}
+.idk input[name=pass]:checked + img{
+    opacity: 100%;
 }
